# image_scout

./: Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  justfile
db_lib/: Cargo.toml
db_lib/src/: artist.rs  artist_alias.rs  artist_page.rs  artist_post.rs  error.rs  image_info.rs  lib.rs  page_type.rs  schema.rs  upload_cache.rs
db_lib/src/provider/: mod.rs  post_provider.rs  twitter.rs
migrations/2020-08-01-140001_initial/: down.sql  up.sql
seeding/: Cargo.toml
seeding/src/: main.rs
src/: compare.rs  main.rs  schema.rs  seeding.rs
src/api/: artist.rs  artist_post.rs  image_proxy.rs  mod.rs  upload.rs
src/database/: mod.rs
src/db/: artist.rs  artist_alias.rs  artist_page.rs  artist_post.rs  image.rs  mod.rs
src/seeding/: artist.rs  artist_alias.rs  artist_post.rs  image.rs  mod.rs
static/: compare.html  script.js  style.css
templates/: compare.tera  index.tera
