[package]
name = "reverser"
version = "0.1.0"
authors = ["Earlopain <earlopain@c5h8no4na.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "tera_templates", "diesel_mysql_pool"]
