[package]
name = "reverser"
version = "0.1.0"
authors = ["Earlopain <earlopain@c5h8no4na.net>"]
edition = "2018"
description = "Find the best image from an artist on all their sites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["chrono"] }
image = "0.23.8"
img_hash = "3.0"
reqwest = { version = "0.10", features = ["blocking"] }
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["serve", "tera_templates", "diesel_mysql_pool", "json"]
