[package]
name = "image_scout"
version = "0.1.0"
authors = ["Earlopain <earlopain@c5h8no4na.net>"]
edition = "2018"
description = "Find the best image from an artist on all their sites"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
chrono = { version = "0.4.13", features = ["serde"] }
db = { path = "db_lib/" }
rocket = "0.4.11"
rocket-multipart-form-data = "0.9.5"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["serve", "tera_templates", "diesel_postgres_pool", "json"]

[workspace]
members = [
    "db_lib",
    "seeding"
]
