[package]
name = "db"
version = "0.1.0"
authors = ["Earlopain <earlopain@c5h8no4na.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["chrono"] }
image = "0.23.8"
img_hash = "3.0"
reqwest = { version = "0.10", features = ["blocking"] }

serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["json"]
json = ["chrono/serde", "serde"]
